syntax = "proto3";

package network.v1;

service Dht {
    rpc Ping(EmptyRequest) returns (EmptyRequest);
}

message EmptyRequest {
}
